--- a/app/partials/comments.html
+++ b/app/partials/comments.html
@@ -14,11 +14,11 @@
 					<a href="tst">{{comment.pageTitle}}</a><br>
 					<span style="font-size:0.8em;">By: <a href="mailto:{{mail}}">{{comment.name}}</a> on {{comment.keen.timestamp | date:'dd MMM yyyy' }}</span>
 				</td>
-				<td style="border-top: none;">
+				<td class="col-sm-9" style="border-top: none;">
 					{{comment.message}}
 				</td>
-				<td>
-					<button ng-click="deleteComment()" class="btn btn-danger btn-xs" type="button">Delete</button>
+				<td class="col-sm-1" style="border-top: none;">
+					<button ng-click="deleteComment()" class="btn btn-danger btn-xs" type="button" >Delete</button>
 				</td>
 			</tr>
 		</tbody>
