--- a/app/partials/postsFrontpage.html
+++ b/app/partials/postsFrontpage.html
@@ -15,7 +15,10 @@
                         </span>
                     </a>
                 </th>
-                <th style="width:50%"><span class="sort" data-sort="title">Title</span></th>
+                <th style="width:50%"><span class="sort" data-sort="title">
+					<div class="panel panel-default widget" style="">
+						<input type="text" class="search form-control" placeholder="Search" ng-model="searchText"/>
+					</div></span></th>
                 <th style="width:30%"><span class="sort" data-sort="tags">Tags</span></th>
             </tr>
             </thead>
@@ -27,8 +30,5 @@
             </tr>
             </tbody>
         </table>
-    </div>
-	<div class="panel panel-default widget" style="">
-        <input type="text" class="search form-control" placeholder="Search" ng-model="searchText"/>
     </div>
 </div>
