--- a/app/partials/postsFrontpage.html
+++ b/app/partials/postsFrontpage.html
@@ -16,9 +16,8 @@
                     </a>
                 </th>
                 <th style="width:50%"><span class="sort" data-sort="title">
-					<div class="panel panel-default widget" style="">
 						<input type="text" class="search form-control" placeholder="Search" ng-model="searchText"/>
-					</div></span></th>
+					</span></th>
                 <th style="width:30%"><span class="sort" data-sort="tags">Tags</span></th>
             </tr>
             </thead>
