--- a/app/partials/postsFrontpage.html
+++ b/app/partials/postsFrontpage.html
@@ -1,7 +1,10 @@
 <div id="entry-list">
-
-	<legend><span class="glyphicon glyphicon-tree-deciduous" style="font-size:0.8em"></span> Posts</legend>
-    <input type="text" class="search form-control" placeholder="Search" ng-model="searchText"/>
+    <div style="margin-top: 0px" class="page-header">
+        <h1 style="float:left">Posts</h1>
+        <div style="padding-top:25px;text-align:right">
+            <input type="text" class="search form-control" placeholder="Search" ng-model="searchText"/>
+        <div style="clear:both;"></div>
+    </div>
     <div style="">
         <table class="table table-striped" style="table-layout: fixed" >
             <thead>
