--- a/app/partials/postsFrontpage.html
+++ b/app/partials/postsFrontpage.html
@@ -28,7 +28,8 @@
 				<tr ng:repeat="post in posts.entries |orderBy:orderByField:reverseSort | filter:searchText">
 					<td class="date">
 						<div>
-							{{ post.Date | date:'dd MM yyyy' }}
+							<a href="{{comment.pageUrl}}">{{ post.Title }}</a><br>
+							<span style="font-size:0.8em;">{{ post.Date | date:'dd MM yyyy' }}</span>
 						</div>
 						<div>
 							<img width="150px" ng-src="{{ post.Preview || '' }}">
