--- a/app/partials/postsFrontpage.html
+++ b/app/partials/postsFrontpage.html
@@ -19,7 +19,7 @@
 							<span class="caret" ng-show="!reverseSort"></span>
 							<span class="caret caret-reversed" ng-show="reverseSort"></span>
 						</span>
-					<th class="col-xs-4 col-md-4  hidden-mobile"><span class="sort" data-sort="tags">
+					<th class="col-xs-4 col-md-4 hidden-xs"><span class="sort" data-sort="tags">
 						<input type="text" style="height: 25px;font-size: 14px;line-height: 25px;" class="search form-control" placeholder="Search" ng-model="searchText"/></span>
 					</th>
 				</tr>
@@ -40,7 +40,7 @@
 							{{ post.Preview }}
 						</div style="padding:10px">
 					</td>
-					<td class="tags">
+					<td class="tags hidden-xs">
 						<div ng-repeat="tag in post.Tags" style="display:inline-block;margin-right:5px;">
 							<span style="margin-bottom:5px" class="label label-default">{{tag}}</span>
 						</div>
