--- a/app/partials/postsFrontpage.html
+++ b/app/partials/postsFrontpage.html
@@ -1,6 +1,6 @@
 <div id="entry-list">
     <div class="clearfix">
-			<table class="table table-striped" style="table-layout:fixed; word-wrap: break-word;word-break:break-all;" >
+			<table class="table table-striped" style="table-layout:fixed; word-wrap: break-word;" >
 				<thead>
 				<tr>
 					<th style="width:130px">
