--- a/_includes/widgets/categoryCloud.html
+++ b/_includes/widgets/categoryCloud.html
@@ -14,10 +14,10 @@ math very well and you have to use filters.
 For more Jekyll widgets, see <http://www.github.com/NetzwergX/jekyll-template-toolkit>.
 {% endcomment %}
 <section>
-    <h1>Tags <span class="hint">({{site.tags.size}})</span></h1>
-	{% for tag in tags_list %}
-		<a href="tags.html#{{ tag | first | cgi_encode }}" style="font-size:{{tag | last | size | times:100 | divided_by:site.tags.size | plus:100}}%">
-			{{ tag | first }}
+    <h1>Categories <span class="hint">({{site.categories.size}})</span></h1>
+	{% for category in site.categories %}
+		<a href="tags.html#{{ category | first | cgi_encode }}" style="font-size:{{category | last | size | times:100 | divided_by:site.categories | plus:100}}%">
+			{{ category | first }}
 		</a>
 	{% endfor %}
 </section>
