--- a/_includes/widgets/tagCloud.html
+++ b/_includes/widgets/tagCloud.html
@@ -22,4 +22,11 @@ For more Jekyll widgets, see <http://www.github.com/NetzwergX/jekyll-template-to
 	{% endfor %}
 </section> 
 
-test
+<section>
+    <h1>Categories <span class="hint">({{site.categories.size}})</span></h1>
+	{% for category in site.categories %}
+		<a href="tags.html#{{ category | first | cgi_encode }}" style="font-size:{{category | last | size | times:100 | divided_by:site.categories | plus:100}}%">
+			{{ category | first }}
+		</a>
+	{% endfor %}
+</section>
