--- a/app/partials/postsFrontpage.html
+++ b/app/partials/postsFrontpage.html
@@ -3,7 +3,7 @@
 			<table class="table table-striped" style="table-layout:fixed; word-wrap: break-word;" >
 				<thead>
 				<tr>
-					<th style="width:130px">
+					<th class="hidden-xs" style="width:130px">
 						<a href="#" ng-click="orderByField='Date'; reverseSort = !reverseSort">
 							Date
 							<span ng-show="orderByField == 'Date'">
@@ -26,7 +26,7 @@
 				</thead>
 				<tbody class="list">
 				<tr ng:repeat="post in posts.entries | orderBy:orderByField:reverseSort | filter:searchText">
-					<td class="date">
+					<td class="date hidden-xs">
 						<div>
 							<a href="{{post.Url}}">{{ post.Title }}</a><br>
 							<span style="font-size:0.8em;">{{ post.Date | date:'dd MM yyyy' }}</span>
