--- a/_includes/themes/twitter/default.html
+++ b/_includes/themes/twitter/default.html
@@ -74,7 +74,7 @@
                 {% assign group = 'navigation' %}
                 {% include JB/pages_list %}
             </ul>
-            <form class="navbar-form navbar-right" style="padding-right:0px" ng-controller="GithubCtrl">
+            <form class="navbar-form navbar-right hidden-xs" style="padding-right:0px" ng-controller="GithubCtrl">
                 <!-- <div class="btn-toolbar bs-component" ng-cloak ng-show="githubLogin"> -->
 				<div class="btn-toolbar bs-component">
 					<button ng-cloak type="button" class="btn btn-warning btn-middle ng-hide" ng-click="requestCode()" ng-show="!user.name">Login with Github</button>
@@ -84,7 +84,7 @@
 						{% raw %} {{user.name}} {% endraw %}
 					  </button>
 					  <button type="button" class="btn btn-success dropdown-toggle" data-toggle="dropdown"><span class="caret"></span></button>
-					  <ul class="dropdown-menu hidden-xs">
+					  <ul class="dropdown-menu">
 							<li><a href="/app/admin/fork.html">Clone/Fork</a></li>
 							<li ng-hide="!user.isAdmin"><a href="/app/admin/editConfig.html">Edit Config</a></li>
 							<li ng-hide="!user.isAdmin"><a href="/app/admin/edit.html">Create Post</a></li>
