--- a/_includes/themes/twitter/default.html
+++ b/_includes/themes/twitter/default.html
@@ -68,13 +68,13 @@
             </button>
             <a class="navbar-brand" href="{{ HOME_PATH }}">{{ site.title }}</a>
         </div>
-        <div class="navbar-collapse collapse navbar-responsive-collapse">
+        <div class="navbar-collapse collapse navbar-responsive-collapse" ng-controller="GithubCtrl">
             <ul class="nav navbar-nav">
                 {% assign pages_list = site.pages %}
                 {% assign group = 'navigation' %}
                 {% include JB/pages_list %}
             </ul>
-            <form class="navbar-form navbar-right hidden-xs" style="padding-right:0px" ng-controller="GithubCtrl">
+            <form class="navbar-form navbar-right hidden-xs" style="padding-right:0px">
                 <!-- <div class="btn-toolbar bs-component" ng-cloak ng-show="githubLogin"> -->
 				<div class="btn-toolbar bs-component">
 					<button ng-cloak type="button" class="btn btn-warning btn-middle ng-hide" ng-click="requestCode()" ng-show="!user.name">Login with Github</button>
