--- a/_includes/themes/twitter/default.html
+++ b/_includes/themes/twitter/default.html
@@ -96,10 +96,15 @@
 				</div>
             </form>
 			<div class="visible-xs">
-				<a href="/app/admin/fork.html">Clone/Fork</a>
-				<a ng-hide="!user.isAdmin" href="/app/admin/editConfig.html">Edit Config</a>
-				<a ng-hide="!user.isAdmin" href="/app/admin/edit.html">Create Post</a>
-				<a ng-hide="!user.isAdmin" href="/app/admin/admin.html">Admin</a>
+				<button ng-cloak type="button" class="btn btn-warning btn-middle ng-hide" ng-click="requestCode()" ng-show="!user.name">Login with Github</button>
+				<ul class="nav navbar-nav">
+					<li><a href="/app/admin/fork.html">Clone/Fork</a></li>
+					<li ng-hide="!user.isAdmin"><a href="/app/admin/editConfig.html">Edit Config</a></li>
+					<li ng-hide="!user.isAdmin"><a href="/app/admin/edit.html">Create Post</a></li>
+					<li ng-hide="!user.isAdmin"><a href="/app/admin/admin.html">Admin</a></li>
+					<li class="divider"></li>
+					<li><a href="#" ng-click="logout()">Logout</a></li>
+				</ul>
 			</div>
         </div>
     </div>
