--- a/_includes/themes/twitter/default.html
+++ b/_includes/themes/twitter/default.html
@@ -96,6 +96,7 @@
 				</div>
             </form>
 			<div class="visible-xs">
+				<li class="divider"></li>
 				<button ng-cloak type="button" class="btn btn-warning btn-middle ng-hide" ng-click="requestCode()" ng-show="!user.name">Login with Github</button>
 				<ul class="nav navbar-nav">
 					<li><a href="/app/admin/fork.html">Clone/Fork</a></li>
