--- a/app/partials/keenMaster.html
+++ b/app/partials/keenMaster.html
@@ -15,7 +15,7 @@
   </div>
   <div class="modal-footer">
 	<button ng-click="cancel()" class="btn btn-default" type="button">Cancel</button>
-	<button ng-disabled="(nameDialog.$dirty && nameDialog.$invalid) || nameDialog.$pristine" ng-click="save()" class="btn btn-primary" type="button" disabled="disabled">
+	<button ng-disabled="(nameDialog.$dirty && nameDialog.$invalid) || nameDialog.$pristine" ng-click="save(nameDialog)" class="btn btn-primary" type="button" disabled="disabled">
 		Save
 	</button>
   </div>
