--- a/assets/themes/syntax/syntax.css
+++ b/assets/themes/syntax/syntax.css
@@ -31,6 +31,7 @@ border-bottom: none !important;
 
 .highlight pre code * {
     white-space: nowrap;    // this sets all children inside to nowrap
+    width:400px;
 }
 
 .highlight pre {
@@ -38,6 +39,7 @@ border-bottom: none !important;
     width:400px;
     word-break: normal;
     word-wrap: normal;
+    white-space: nowrap;
 }
 
 .highlight .c { color: #586E75 } /* Comment */
