--- a/assets/themes/syntax/syntax.css
+++ b/assets/themes/syntax/syntax.css
@@ -31,15 +31,16 @@ border-bottom: none !important;
 
 .highlight pre code * {
     white-space: nowrap;    // this sets all children inside to nowrap
-    width:400px;
+    width:100%;
+    height: auto;
+    overflow: auto;
 }
 
 .highlight pre {
     overflow-x: auto;       // this sets the scrolling in x
-    width:400px;
-    word-break: normal;
-    word-wrap: normal;
-    white-space: normal;
+    width:100%;
+    height: auto;
+    overflow: auto;
 }
 
 .highlight .c { color: #586E75 } /* Comment */
