--- a/assets/themes/syntax/syntax.css
+++ b/assets/themes/syntax/syntax.css
@@ -30,18 +30,12 @@ border-bottom: none !important;
 }
 
 .highlight pre code * {
-    white-space: nowrap;    // this sets all children inside to nowrap
-    width:400px;
-    height: auto;
-    overflow: auto;
+    overflow: scroll;
+    white-space:pre;
 }
 
 .highlight pre {
-    overflow-x: auto;       // this sets the scrolling in x
-    width:400px;
-    white-space: pre-line;
-    height: auto;
-    overflow: auto;
+    overflow-x: scroll;       // this sets the scrolling in x
 }
 
 .highlight .c { color: #586E75 } /* Comment */
